# andela-gen-ai_P1_support-agent-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
metrics/: metrics.csv
notebooks/: notebook.ipynb
prompts/: main_prompt.md
reports/: PI_report_en.md
src/: run_query.py
src/support_agent/: core.py
tests/: test_core.py
