[project]
dependencies = [
    "openai",
    "pydantic"
]
name = "support-agent"
version = "0.0.1"
authors = [
  { name="Fady Morris Ebeid", email="fadymorris86@gmail.com" },
]
description = "Support Agent Command Line"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
support-agent = "run_query:main"
